# tg-ws-proxy

./: .gitignore  AUTHOR_UPDATE.md  BUILD_COMPLETE.md  BUILD_RESULTS.md  CONTRIBUTING.md  ENCRYPTION.md  GIT_SYNC_COMPLETE.md  INSTALL_MOBILE.md  LICENSE  LICENSE_RU  PHONE_CONNECTION_FIX.md  PHONE_FIX.md  QWEN.md  README.md  RELEASE_NOTES.md  RELEASE_VERSIONS.md  SECURITY.md  SYNC_CHANGES.md  UI_UPDATE.md  build_desktop.py  build_mobile.py  config.default.json  generate_pwa_icons.py  generate_qr.py  linux.py  macos.py  pyproject.toml  quick_build.py  requirements-build.txt  requirements-dev.txt  requirements.txt  run_web.py  todo.md  tray.py  upload-release.bat  windows.py
.github/workflows/: build.yml  ci.yml
docs/: ANTI_CENSORSHIP.md  BUILD.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONFIGURATION.md  DPI_BYPASS.md  ENHANCED_TRANSPORTS.md  GAMING_PROXY.md  GITHUB_RELEASE.md  HTTP2_RESEARCH.md  INSTALL_MOBILE.md  MONITORING.md  QUICKSTART.md  RATE_LIMITING.md  README.md  RELEASE_NOTES.md  SECURITY_ADVANCED.md  TELEGRAM_SETUP.md  TESTING.md
mobile-app/: .gitignore  capacitor.config.json  package-lock.json  package.json
mobile-app/android/: .gitignore  build.gradle  gradle.properties  settings.gradle  todo-android.md  variables.gradle
mobile-app/android/app/: build.gradle  proguard-rules.pro
mobile-app/android/app/src/main/: AndroidManifest.xml  new.sh
mobile-app/android/app/src/main/java/com/dupley/tgwssproxy/: AutoStartHelper.java  BootReceiver.java  ConfigUpdateWorker.java  MainActivity.java  NetworkChangeReceiver.java  ProxyForegroundService.java  ProxyPlugin.java  ProxyTileService.java  ProxyVpnService.java
mobile-app/android/app/src/main/python/: android_entry.py
mobile-app/android/app/src/main/res/values/: strings.xml  styles.xml
mobile-app/android/app/src/main/res/values-en/: strings.xml
mobile-app/android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  shortcuts.xml
mobile-app/android/gradle/: libs.versions.toml
mobile-app/www/: index.html  manifest.json  sw.js
packaging/: linux.spec  macos.spec  windows.spec
proxy/: __init__.py  __main__.py  alerts.py  anticensorship_config.py  autotune.py  bridge_relay.py  circuit_breaker.py  client_stats.py  cloudflare_tunnel.py  cloudflare_warp.py  config.py  config_backup.py  connection_cache.py  connection_pool.py  constants.py  crypto.py  dashboard.py  dc_monitor.py  diagnostics.py  diagnostics_advanced.py  dns_resolver.py  doh_resolver.py  dpi_bypass.py  e2e_encryption.py  gaming_console_proxy.py  http2_transport.py  i18n.py  logger.py  meek_transport.py  metrics_history.py  mtproto_config.py  mtproto_parser.py  mtproto_proxy.py  mtproxy.py  mux_transport.py  notifications.py  obfsproxy_transport.py  optimizer.py  performance_profiler.py  pluggable_transports.py  (+24 more)
scripts/: security_audit.py  tg-ws-proxy.service
tests/: conftest.py  test_alerts.py  test_circuit_breaker.py  test_client_stats.py  test_cloudflare_tunnel.py  test_config.py  test_config_backup.py  test_connection_cache.py  test_connection_pool.py  test_dashboard.py  test_dc_monitor.py  test_diagnostics.py  test_dns_resolver.py  test_doh_resolver.py  test_enhanced_transports.py  test_integration.py  test_logger.py  test_metrics_history.py  test_mtproto.py  test_mtproto_config.py  test_mtproto_parser.py  test_mtproto_proxy.py  test_new_transports.py  test_notifications.py  test_optimizer.py  test_performance_profiler.py  test_pluggable_transports_integration.py  test_plugins.py  test_profiler.py  test_proxy.py  test_rate_limiter.py  test_retry_strategy.py  test_socks5.py  test_socks5_handler.py  test_socks5_udp.py  test_stats.py  test_system_proxy.py  test_tg_ws_proxy.py  test_tg_ws_proxy_logic.py  test_tg_ws_proxy_v2.py  (+3 more)
