[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-ws-proxy"
version = "2.10.0"
description = "Local SOCKS5 proxy for Telegram Desktop that routes traffic via WebSocket connections"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dupley Maxim Igorevich", email = "maxim.dupley@example.com"}
]
keywords = ["telegram", "proxy", "socks5", "websocket", "mtproto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
]

# Copyright notice
copyright = "© 2026 Dupley Maxim Igorevich. All rights reserved."

dependencies = [
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.26.0",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
    "black>=26.3.1",
]
tray = [
    "psutil>=7.2.2",
    "pystray>=0.19.5",
    "pyperclip>=1.11.0",
    "customtkinter>=5.2.2",
    "Pillow>=12.1.1",
]

[project.urls]
Homepage = "https://github.com/Flowseal/tg-ws-proxy"
Repository = "https://github.com/Flowseal/tg-ws-proxy.git"
Issues = "https://github.com/Flowseal/tg-ws-proxy/issues"

[project.scripts]
tg-ws-proxy = "proxy.tg_ws_proxy:main"
tg-ws-tray = "tray:main"

[project.gui-scripts]
tg-ws-tray-gui = "tray:main"

[tool.setuptools.packages.find]
include = ["proxy*"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["proxy"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "proxy.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
tmp_path_retention_policy = "failed"

[tool.coverage.run]
source = ["proxy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
